<resources>
    <string name="app_name">My guider</string>
    <string name="email_address">Email Address</string>
    <string name="user">User</string>
    <string name="remember_me">Remember me</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="guide">Guide</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget password</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="country">Country</string>
    <string name="next">Next</string>
    <string name="profile_picture">Profile picture</string>
    <string name="description">Description</string>
    <string name="create_account">Create Account</string>
</resources>
