<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userlogin">

    <EditText
        android:id="@+id/uemail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="300dp"

        android:autofillHints=""
        android:background="@drawable/round"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/upassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/uemail"

        android:layout_marginTop="10dp"

        android:autofillHints=""
        android:layout_centerHorizontal="true"
        android:background="@drawable/round"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/uliner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_alignStart="@+id/upassword">

        <CheckBox
            android:id="@+id/ucheckbox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/uforget"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/usignin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uliner"

        android:layout_marginTop="10dp"
        android:background="@drawable/round"
        android:text="@string/sign_in"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/uregister"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usignin"
        android:layout_marginStart="180dp"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/usignin"
        android:text="@string/do_you_have_an_account"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/userbtn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uliner"
        android:layout_marginTop="158dp"
        android:background="@drawable/round_corner"
        android:text="@string/user"
        android:layout_alignStart="@+id/usignin"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/guidebtn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uliner"
        android:layout_marginTop="158dp"
        android:background="@drawable/round_corner2"
        android:text="@string/guide"
        android:layout_alignEnd="@+id/usignin"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>